k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ues-demo-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: ues-demo-deployment
  replicas: 1
  template:
    metadata:
      labels:
        name: ues-demo-deployment
    spec:
      containers:
      - name: ues-demo-container
        image: gcr.io/serious-curve-364819/ues-demo:latest
        ports:
        - containerPort: 3333
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
#        livenessProbe:
#          httpGet:
#            path: /health
#            port: 8080
#          initialDelaySeconds: 60
#          periodSeconds: 30
#          timeoutSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: /health
#            port: 8080
#          initialDelaySeconds: 60
#          periodSeconds: 30
#          timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ues-demo-service
  namespace: default
  labels:
    name: ues-demo-deployment
spec:
  type: NodePort
  selector:
    name: ues-demo-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
#    kubernetes.io/ingress.global-static-ip-name: ingress-controller-ip
#    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: ues-demo-service
      port:
        number: 80
  rules:
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ues-demo-service
            port:
              number: 80
